--- a/src/Components/LoginForm/Loginform.css
+++ b/src/Components/LoginForm/Loginform.css
@@ -1,58 +1,68 @@
-.rflex,
-.cflex {
-  top: 50%;
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+.flex-r,
+.flex-c {
   justify-content: center;
   align-items: center;
   display: flex;
+  padding: 10px;
 }
-.cflex {
+.flex-c {
   flex-direction: column;
 }
-.rflex {
+.flex-r {
   flex-direction: row;
+
 }
 
 .login-text {
+  margin-top: 5rem;
   background-color: #f6f6f6;
-  width: 800px;
-  height: 500px;
+  width: 600px;
+  height: 700px;
   border-radius: 10px;
   padding: 10px 20px;
+  
 }
 
 .logo {
-  margin-bottom: 20px;
-}
-.logo span,
-.logo span i {
-  font-size: 25px;
-  color: #0d8aa7;
+  margin-left: 100px;
 }
 
 .login-text h1 {
-  font-size: 25px;
+  font-size: 35px;
+  font-weight: 400;
 }
 .login-text p {
-  font-size: 15px;
+  font-size: 20px;
   color: #000000b2;
+  text-align: left;
 }
 
-.cflex {
+form {
   align-items: flex-start !important;
   width: 100%;
   margin-top: 15px;
 }
 
-.cflex .input-box {
+.input-box {
   margin: 10px 0px;
   width: 100%;
 }
-.cflex .label {
-  font-size: 15px;
+.label {
+  font-size: 20px;
+  font-weight: 300;
   color: black;
   margin-bottom: 3px;
 }
-.cflex .input {
+.input {
   background-color: #f6f6f6;
   padding: 0px 5px;
   border: 2px solid rgba(216, 216, 216, 1);
@@ -61,42 +71,42 @@
   justify-content: flex-start;
 }
 
-.cflex input {
+input {
   border: none;
   outline: none;
   padding: 10px 5px;
   background-color: #f6f6f6;
   flex: 1;
 }
-.cflex .input i {
+.input i {
   color: rgba(0, 0, 0, 0.4);
 }
 
-.cflex .check span {
+.check span {
   color: #000000b2;
   font-size: 15px;
   font-weight: bold;
   margin-left: 5px;
 }
 
-.cflex .btn1 {
+.btn {
   color: #ffffff;
   border-radius: 30px;
   padding: 10px 15px;
   background: linear-gradient(122.33deg, #68bed1 30.62%, #1e94e9 100%);
   margin-top: 30px;
   margin-bottom: 10px;
-  font-size: 16px;
+  font-size: 20px;
   transition: all 0.3s linear;
 }
 
-.cflex .btn:hover {
+.btn:hover {
   transform: translateY(-2px);
 }
-.cflex .extra-line {
-  font-size: 15px;
+.extra-line {
+  font-size: 20px;
   font-weight: 600;
 }
-.cflex .extra-line a {
+.extra-line a {
   color: #0095b6;
 }
